First Problem Update
Updated timing for first problem appearance. Audio is recorded.

--- a/CPV_proto_v1.html
+++ b/CPV_proto_v1.html
@@ -25,7 +25,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="cpvprotov1_hype_container" style="margin:auto;position:relative;width:960px;height:590px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="CPV_proto_v1.hyperesources/cpvprotov1_hype_generated_script.js?75408"></script>
+		<script type="text/javascript" charset="utf-8" src="CPV_proto_v1.hyperesources/cpvprotov1_hype_generated_script.js?11346"></script>
 	</div>
 
 	<!-- end copy -->
@@ -36,9 +36,13 @@
 
 	<div style="display:none" aria-hidden=true>
 
+		<div>H</div>
+		<div><</div>
 		<div>Owl has 199.
 </div>
 		<div>Title
+</div>
+		<div>Seal has 199. Give Moose 201.
 </div>
 
 	</div>
