--- a/CPV_proto_v1.html
+++ b/CPV_proto_v1.html
@@ -25,7 +25,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="cpvprotov1_hype_container" style="margin:auto;position:relative;width:960px;height:590px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="CPV_proto_v1.hyperesources/cpvprotov1_hype_generated_script.js?22858"></script>
+		<script type="text/javascript" charset="utf-8" src="CPV_proto_v1.hyperesources/cpvprotov1_hype_generated_script.js?12260"></script>
 	</div>
 
 	<!-- end copy -->
@@ -44,6 +44,8 @@
 </div>
 		<div>Seal has 199. Give Moose 201.
 </div>
+		<div>199</div>
+		<div>201</div>
 
 	</div>
 
